# aegis

./: .dockerignore  .env  .gitignore  Cargo.toml  Kbuild  Makefile  aegisd.Dockerfile  build.rs  lock.c  lock.h  lookup.c  mod.c  monitor.c  monitor.h  sqlx-data.json  sysfs.c
aegisc/: Cargo.toml
aegisc/src/: client.rs  config.rs  device_key.rs  event.rs  lock.rs  main.rs  module.rs  power.rs  run_as.rs  webcam.rs  xorg.rs
aegiscli/: Cargo.toml
aegiscli/src/: config.rs  main.rs
aegiscli/src/cmd/: derive_root_key_file.rs  derive_root_pubkey.rs  gen_device_key.rs  register.rs
aegiscli/src/cmd/admin/: confirm_pending.rs  delete_pending.rs  delete_registered.rs  list_pending.rs  list_registered.rs  set_status.rs
aegiscli/src/cmd/device/: status.rs
aegisd/: Cargo.toml  sqlx-data.json
aegisd/.sqlx/: query-092b7ae9a5430979640e07acc60fd829a83cd17a5d95973a7ddef893a8104bb5.json  query-1da93e8600f72c80d11799930356967c907e28693f8b22cc5cc1656dbf97d00d.json  query-467c023ccf68ff0a7681a6af149e7032593b27facbc5e785587dd3cac678c1bc.json  query-46fce448f8c10644f78522fdd96ba09e70c0c42f9a7153f6b0f84442fb80e890.json  query-4c96df47d05cc5b17e5652267bdea54cea8f50ba16e18a748e0fc2a6c47ca306.json  query-534b7fca695fc0cf63b1ab554ae627a80eb829339a3671cbd1f1ebf6c3efad26.json  query-6b797f736414f6a552eec16112a1b66747ae6d00f68f1fe1a3ad997cc0efe4b9.json  query-828ada1504094482d25f67433d229bad245b4c02f43a7851416c87e493b5f188.json  query-99041986a28814bb930760aa99badcfd45edf6d506deb74c57053a2cbd42781a.json  query-aae2a1513ca687d9e5e02b89ec5f5bb82ea5e0e993344451f560f51619aadf8d.json  query-af799e89b5f3697bf87ebccf8b757f62eae66c76254fdaf1cb93e0673759145e.json  query-bd94add839a959caad64bc4c233b01d875ca8e516960665745f0aaddb638bdb1.json  query-c9e6c391ab006dae0e26ceecddfaf39c2ff03bbc95aab195d48b204cc464af56.json  query-d500de412a09ef1d147573ee30166f51bdffebeab0dad6a8276a3684be6994dd.json  query-e6e51578619ccac3abc4745024270ba0faf6a9039c2fd613b2c1e16d5c9ba413.json  query-eba4b28f942f7012b3ea7dbc8f72a539cc7536061a1f93d279c527f4762be6e6.json  query-f81978c7a0ef0415cb4be6739c2da1728bb5fa803ed5d40206b6118b361ff5ab.json
aegisd/handler_macros/src/: lib.rs
aegisd/migrations/: 20210907153237_device_table.sql  20210911130711_status_table.sql  20220129161806_status_decoy.sql  20220129233229_device_cam_pics.sql  20220206121412_event_table.sql
aegisd/src/: config.rs  error.rs  main.rs  middleware.rs  model.rs  server.rs  ws.rs
aegisd/src/handler/: admin.rs  device.rs  root.rs
aegisd/src/handler/admin/: handler_inventory.rs
aegisd/src/handler/device/: handler_inventory.rs
aegisd/src/middleware/: admin.rs  device.rs
aegisd/src/model/: device.rs  events.rs  pics.rs
aegisk/: Kbuild  Makefile  dkms.conf  lock.c  lookup.h  mod.c  monitor.c  monitor.h  sysfs.c  sysfs.h
aegislib/: Cargo.toml  build.rs  uniffi.toml
aegislib/src/: client.rs  client.udl  command.rs  crypto.rs  ffi.rs
aegislib/src/client/: admin_client.rs  api_client.rs  dev_client.rs  rest_client.rs  ws_client.rs
aegislib/src/command/: admin.rs  device.rs  server.rs
aegislib/src/ffi/: admin_client_ffi.rs
app/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
app/app/: build.gradle
app/app/src/androidTest/java/net/alacrem/aegis/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/net/alacrem/aegis/: ClientBuilder.kt  Config.kt  DevicePictureFileProvider.kt
app/app/src/main/java/net/alacrem/aegis/ui/: DeviceSettingsActivity.kt
app/app/src/main/java/net/alacrem/aegis/ui/login/: LoginActivity.kt  LoginResult.kt
app/app/src/main/java/net/alacrem/aegis/ui/main/: DeviceEventAdapter.kt  (+10 more)
app/app/src/main/res/layout/: activity_device_events_list.xml  activity_device_pictures_list.xml  activity_device_settings.xml  fragment_main.xml  item_device.xml  item_device_event.xml  item_device_picture.xml  item_pending_device.xml
app/app/src/main/res/menu/: device_power_menu.xml
app/app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/app/src/main/res/values-night/: themes.xml
app/app/src/test/java/net/alacrem/aegis/: ExampleUnitTest.kt
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/java/net/alacrem/aegis/: Config.kt
app/src/main/java/net/alacrem/aegis/data/: LoginDataSource.kt  LoginRepository.kt  Result.kt
app/src/main/java/net/alacrem/aegis/data/model/: LoggedInUser.kt
app/src/main/java/net/alacrem/aegis/ui/: DeviceSettingsActivity.kt
app/src/main/java/net/alacrem/aegis/ui/login/: LoggedInUserView.kt  LoginActivity.kt  LoginFormState.kt  LoginResult.kt  LoginViewModel.kt  LoginViewModelFactory.kt
app/src/main/java/net/alacrem/aegis/ui/main/: DeviceItemAdapter.kt  DeviceListFragment.kt  MainActivity.kt  PageViewModel.kt  PlaceholderFragment.kt  SectionsPagerAdapter.kt
app/src/main/res/layout/: activity_device_settings.xml  activity_login.xml  activity_main.xml  fragment_main.xml
app/src/main/res/values/: strings.xml  themes.xml
device_handler_macro/: Cargo.toml
device_handler_macro/src/: lib.rs
handler_macros/: Cargo.toml
handler_macros/src/: lib.rs
migrations/: 20210907153237_device_table.sql  20210911130711_status_table.sql
src/: client.rs  client.udl  command.rs  config.rs  crypto.rs  dev_client.rs  device_handlers.rs  error.rs  ffi.rs  handler.rs  lib.rs  main.rs  middleware.rs  root_handlers.rs  ws.rs  ws_client.rs
src/client/: admin_client.rs  dev_client.rs  rest_client.rs  sync_admin_client.rs  ws_client.rs
src/cmd/: admin.rs  derive_root_key_file.rs  derive_root_pubkey.rs  device.rs  gen_device_key.rs  mod.rs  register.rs
src/cmd/admin/: delete_pending.rs  list_pending.rs  list_registered.rs
src/cmd/device/: status.rs
src/command/: admin.rs  device.rs
src/device_handlers/: handler_inventory.rs
src/ffi/: admin_client_ffi.rs  error.rs
src/handler/: admin.rs  device.rs  root.rs
src/handler/admin/: handler_inventory.rs
src/handler/device/: handler_inventory.rs
src/middleware/: admin.rs  device.rs
src/model/: device.rs
