[package]
name = "aegislib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
bincode = "1.3.3"
anyhow = "1.0.43"
sodiumoxide = "0.2.7"
signature = "1.3.1"
tracing = "0.1.26"

# Client
async-trait = { version = "0.1.51", optional = true }
futures = { version = "0.3.17", optional = true }
bytes = { version = "1.1.0", optional = true }
tokio = { version = "1.4", features = ["net"], default-features = false, optional = true }
tokio-tungstenite = { version = "0.15.0", optional = true }
reqwest = { version = "0.11.4", features = ["rustls-tls", "gzip"], default-features = false, optional = true }

[features]
client = ["async-trait", "futures", "bytes", "tokio", "tokio-tungstenite", "reqwest"]
