[package]
name = "aegisc"
version = "0.1.0"
edition = "2021"

[dependencies]
aegislib = { path = "../aegislib", features = ["client"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
tokio = { version = "1.4", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.5.8"
anyhow = "1.0.43"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tracing-appender = "0.2.2"
clap = "4.0.7"
nix = "0.26.1"
framebuffer = "0.3.1"
image = "0.24.0"
captrs = "0.3.1"
input = "0.7.1"
lazy_static = "1.4.0"
rscam = "0.5.5"
sysinfo = "0.27.6"
chrono = "0.4.19"
humantime = "2.1.0"
