[package]
name = "aegiscli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for interacting with the aegisd server"

[dependencies]
aegislib = { path = "../aegislib", features = ["client"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
reqwest = { version = "0.11.4", features = ["rustls-tls", "gzip"], default-features = false }
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
dialoguer = { version = "0.9.0", features = ["password"], default-features = false }
toml = "0.5.8"
bincode = "1.3.3"
anyhow = "1.0.43"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
clap = { version = "3.1.0", features = ["cargo"] }
directories-next = "2.0.0"
cli-table = "0.4"
base64 = "0.13.0"
getrandom = "0.2.3"
chrono = "0.4"
