[package]
name = "aegisd"
version = "0.1.0"
edition = "2021"

[dependencies]
aegisd_handler_macros = { path = "handler_macros" }
aegislib = { path  = "../aegislib" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
sqlx = { version = "0.6.2", features = [ "runtime-actix-rustls", "postgres", "offline", "chrono" ] }
toml = "0.5.8"
bincode = "1.3.3"
futures = "0.3.17"
anyhow = "1.0.43"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
clap = "3.1.0"
actix = "0.13.0"
actix-web = { version = "4.0.1", features = ["macros", "compress-gzip", "compress-zstd"], default-features = false }
actix-web-actors = "4.0.0"
actix-http = "3.0.4"
actix-service = "2.0.2"
inventory = "0.3.0"
lazy_static = "1.4.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
signature = "1.3.1"
chrono = "0.4"
base64 = "0.13.0"
dashmap = "5.1.0"
