[package]
name = "aegisd"
version = "0.1.0"
edition = "2021"

[dependencies]
aegisd_handler_macros = { path = "handler_macros" }
aegislib = { path  = "../aegislib" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "sync"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "offline", "chrono", "postgres" ] }
hyper = "0.14"
http = "0.2.8"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace", "compression-full"] }
axum = { version = "0.6.0-rc.2", features = ["http2", "ws", "original-uri", "tower-log"], default-features = false }
async-stream = "0.3.3"
toml = "0.5.8"
bincode = "1.3.3"
futures = "0.3.17"
anyhow = "1.0.43"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
clap = "4.0.7"
inventory = "0.3.0"
lazy_static = "1.4.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
signature = "1.3.1"
chrono = "0.4"
base64 = "0.13.0"
dashmap = "5.1.0"

[dev-dependencies]
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "chrono", "sqlite" ] }
rand = "0.7.3"
