[package]
name = "aegislib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
bincode = "1.3.3"
anyhow = "1.0.43"
signature = "1.3.1"
tracing = "0.1.26"
generic-array = { version = "0.14.4", features = ["serde"] }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
chacha20poly1305 = "0.9.0"
argon2 = "0.4.0"
getrandom = "0.2.3"
base64 = "0.13.0"
strum_macros = "0.24.0"
thiserror = "1.0.30"
derive_more = "0.99.17"

# Client
async-trait = { version = "0.1.51", optional = true }
futures = { version = "0.3.17", optional = true }
bytes = { version = "1.1.0", optional = true }
tokio = { version = "1.4", features = ["net"], default-features = false, optional = true }
tokio-tungstenite = { version = "0.17.1", features = ["rustls-tls-webpki-roots"], optional = true }
reqwest = { version = "0.11.4", features = ["rustls-tls", "gzip"], default-features = false, optional = true }

# FFI (note: uniffi versions must always be in sync — otherwise problems happen at runtime!)
uniffi = { version = "=0.19.2", optional = true }
uniffi_macros = { version = "=0.19.2", optional = true }

[build-dependencies]
uniffi_build = { version = "=0.19.2", optional = true }

[features]
client = ["async-trait", "futures", "bytes", "tokio", "tokio-tungstenite", "reqwest"]
ffi = ["client", "uniffi", "uniffi_macros", "uniffi_build", "tokio/rt-multi-thread"]
